N°4283 - Fix spacing for Pills when wrapping
Also repalce some spacing with variables

--- a/css/backoffice/blocks-integrations/pill/_pill-with-pill.scss
+++ b/css/backoffice/blocks-integrations/pill/_pill-with-pill.scss
@@ -6,6 +6,9 @@
 $ibo-pill--spacing-left--with-same-block: $ibo-spacing-500 !default;
 
 
-.ibo-pill + .ibo-pill {
-  margin-left: $ibo-pill--spacing-left--with-same-block;
+/* For pills, margin is set on the right to keep them aligned horizontally when they wrap */
+/* The drawback is that we can't set the margin only when next to another .ibo-pill as there is no such CSS selector */
+/* Also :last-child is used instead of :last-of-type as pill can be either an <a> or a <span> */
+.ibo-pill:not(:last-child) {
+  margin-right: $ibo-pill--spacing-left--with-same-block;
 }
