--- a/css/backoffice/components/dashlet/_dashlet-badge.scss
+++ b/css/backoffice/components/dashlet/_dashlet-badge.scss
@@ -18,7 +18,7 @@ $ibo-dashlet-badge--action-list-count--margin-right: $ibo-spacing-300 !default;
 $ibo-dashlet-badge--icon-container--margin-right: $ibo-spacing-500 !default;
 $ibo-dashlet-badge--icon--size: 48px !default;
 
-$ibo-dashlet-badge--action-icon--margin-right: 6px !default;
+$ibo-dashlet-badge--action-icon--margin-right: $ibo-spacing-300 !default;
 
 /* CSS variables (can be changed directly from the browser) */
 :root {
